client/src/scss/core/_layout.scss
@import '../core/variables';

body {
	margin: 0;
	background: $bg-light-mode;
	padding: map-get($spacers, 5);
	min-height: 100vh;
  .data-theme {
    background: $color-white;
  }
}

body.dark {
  background: $bg-dark-mode;
  h1,h2,h3,h4,h5,h6,p,span {
    color: $color-dark;
  }
  .data-theme {
    background: $color-grey;
    box-shadow: rgba(194, 191, 191, 0.1) 0px 4px 12px;
  }
  .modal {
    background-color: $bg-dark-mode;
  }
  .modal-background {
    background: rgba(255, 255, 255, 0.3);
  }
  .list-group-item {
    background-color: transparent;
  }
}

.data-theme {
  border-radius: 0.5rem;
  padding: map-get($spacers, 4);
  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
}

h1,h2,h3,h4,h5,h6 {
  font-family: 'Gochi Hand', cursive;
}

.main-container {
  margin-right: map-get($spacers, 4);
  min-height: calc(100vh - 240px);
}

.sidebar-container {
  &__nav {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    .btn {
      margin-bottom: map-get($spacers, 3);
    }
  }
}


.font-lovely {
  font-family: 'Gochi Hand', cursive;
}

